# VIS

./: .gitignore  .markdownlint.json  README.md  Untitled.xcf  VIS.py  VIS.spec  __init__.py  changelog.md  changelog.txt  cleanup.py  documentation.md  elements.py  knownissues.md  menu.py  pyproject.toml  readme.txt  setup.py  test.py  testico.py
.VIS/Templates/: host.txt  m_elements.txt  screen.txt
.claude/: settings.local.json
.github/workflows/: claude-code-review.yml  docs.yml  publish.yml  stale-branches.yml
Form/Screens/: root.py
Screens/: root.py
Templates/: screen.txt
VIS/: VIS.py  cleanup.py  elements.py  patch.py  project.py  release.py  stitch.py
VIS.egg-info/: PKG-INFO  SOURCES.txt
VIS/Objects/: _WindowGeometry.py
VIS/Templates/: f_element.txt  screen.txt
VIS/Widgets/: _Menu.py  _MenuItem.py  _PopOutWindow.py  _QuestionWindow.py  _WarningWindow.py  __init__.py
VIStk/: VIS.py  fUtil.py
VIStk/Bindings/: _RecordBinding.py  __init__.py
VIStk/Methods/: sizing.py
VIStk/Objects/: _ArgHandler.py  _DetachedWindow.py  _Docs.py  _Host.py  _Identity.py  _Layout.py  _Root.py  _TabManager.py  _VIMG.py  _Window.py  _WindowGeometry.py  __init__.py
VIStk/Structures/: Installer.py  Launcher.py  Uninstaller.py  VINFO.py  _Help.py  _Install.py  _Project.py  _Release.py  _Screen.py  _VINFO.py  _Version.py  __init__.py  project.py  release.py  screen.py
VIStk/Templates/: f_element.txt  host.txt  m_elements.txt  screen.txt  spec.txt
VIStk/Widgets/: _AutocompleteEntry.py  _CollapsibleFrame.py  _DateEntry.py  _Dialogs.py  _InfoRow.py  (+13 more)
docs/: Makefile
(+28 files in other folders)
